# TerraQuery-Natural-Language-Interpretation-of-Satellite-Imagery

./: README.md
DOCUMENTATION/: README_band_classifier.md  README_evaluate_api.md  README_gaurav.md  README_images2.md  README_llama-shit.md  README_llama_shit_detailed.md  README_outputs.md  README_qwen.md  README_qwen_api.md  README_qwen_cocoop.md  README_qwen_model.md  README_qwen_model_detailed.md  README_report_images.md  README_samples.md  README_samyak.md  README_samyak_qwen_finetune.md  README_scripts.md  README_skySkript_mini.md  README_spandan.md  README_spandan_models_to_test.md  README_test_dataset_gaurav.md  README_vqa.md
Team_27/: README.md  deployment_script.sh  environment_specifications.md  package-lock.json
band_classifier/: type_classifier.py
evaluate_api/: eval_metrics.json  evaluate.py  inference.py  metrics_per_file.json  out.json  temp.json  temp.txt
gaurav/: band_classifier_pytorch_final_final.ipynb  categorize.ipynb  categorize_folder.ipynb  corrected.ipynb  inference.ipynb  inference2.ipynb  type_classifier.py
installation/: install.sh
llama-shit/: export
llama-shit/qwen3vl_bindings/: CMakeLists.txt  CMakeLists.txt.bak  api.py  api.py.bak  api_test_results.json  bbox_example.py  compile.sh  cpu.cpp  draw.py  eval_qwen3vl.py  example.py  gpu_test  gpu_test.cpp  gpu_test_robust.cpp  pred_boxes.json  prompt  py_qwen3vl.cpp  py_qwen3vl.cpp.bak  qwen3vl_api.py  setup.py  test.py
llama-shit/qwen3vl_bindings/qwen_mtmd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
qwen/: 20000_train.json  RESULTS.md  TODOS.txt  a.diff  bbox_visual.py  bbox_visual.py.save  bbscore.py  bbscore_2.py  bbscore_all.py  bbscore_tim.py  bbscore_vqa.py  bert_bleu.py  extract_bert_bleu.py  finetune_qwen_all.py  finetune_qwen_caption_earthmind.py  iter.py  nohup.out  prepare_earthmind_dataset.py  qwen_run.sh  qwen_test.py  rgb_f_vs_base.json  run.sh  test_adapter_loading.py  test_result2.json  test_results.json  tim.py  tim_2.py  tim_2_run.sh  tim_infer.py  tim_run.sh  wait_and_run.sh
qwen_api/: api.py  api_test_results.json  test.py
qwen_cocoop/: bbscore.py  cocoop_inference.py  finetune_cocoop.py  finetune_cocoop_v2.py  finetune_qwen_all.py  generate_captions_cocoop.py  generate_captions_from_checkpoints.py  temp.txt  tree
qwen_model/: eval.sh  eval_gguf.sh  qwen_grounding.py  qwen_sam.py
samples/: sar_course_sar_.html
samyak/: ok.py
scripts/: profile_local_vlm.py
skySkript_mini/: mv.sh  sr.py
vqa/: ALSO.md  API_MIGRATION_SUMMARY.md  API_MODE_README.md  IMPLEMENTATION_SUMMARY.md  README.md  (+31 more)
(+9608 files in other folders)
